2004-02-15  Dan Espen  <dane@mk.telcordia.com>

	* documentation/faq/index.php:
	* authors/index.php:
	regenerated
	
2004-01-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/desktops/An_Thi_Nguyen_Le-1152x864: 
	Removed shot since it is already in 
	An_Thi_Nguyen_Le-desk1-1152x864
	
2004-01-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	*  screenshots/desktops/Tavis_Ormandy-desk-1152x864/*
	Added screenshot.

2004-01-19  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* fvwm-logo/index.php: 
	Added new logo and competition result pages.
	
2004-01-15  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/desktops/Andrew_Dolgov-1152x864:
	Added screenshot.
	
2004-01-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.php:
	* logo-competition/index.php:
	Updated current state of logo competition.

2004-01-01  Mikhael Goikhman  <migo@homemail.com>

	* screenshots/desktops/GlenLeeEdwards-desk3-1024x768/description.inc:
	updated url

	* documentation/faq/index.php:
	* news/index.php:
	regenerated

2003-12-08  Mikhael Goikhman  <migo@homemail.com>

	* screenshots/desktops/Mikhael-desk-1280x1024/description.inc:
	updated description

	* documentation/faq/index.php:
	* news/index.php:
	regenerated

2003-11-05  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/windowdecors/DecorDemo4.fvwmrc:
	Add plus sign from Rik Nilsson.

2003-11-01  Mikhael Goikhman  <migo@homemail.com>

	* download/index.php:
	added a link to deb packages

	* definitions.inc:
	* index.php:
	* authors/index.php:
	* news/index.php:
	updated for 2.5.8

2003-10-22  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* download/index.php:
	Changed package info of alpha/beta release to unstable release.

2003-10-20  Dan Espen  <dane@mk.telcordia.com>

	* download/index.php: Remove download alpha releases link, out of date.

2003-10-11  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* logo-competition/logos_new.php:
	fixed name of Felix Wiemann - double n was missing
