@@ -1,3 +1,8 @@
+2004-02-20  Uwe Pross   <keinFruehstuecksfleisch@gmx.net>
+
+	* contact/index.php: 
+	added search form for google search
+
 2004-02-15  Dan Espen  <dane@mk.telcordia.com>
 
 	* documentation/faq/index.php:
